2024-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news.

2024-08-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/fpx.c: Coverity fixes for "dead code" and an integer
	overflow issue.

	* magick/image.c (MagickParseSubImageSpecification): Fix
	SourceForge issue "#746 Off-by-one-error when converting PDF with
	multiple pages". Also add additional sanity checking.
	Unfortunately, this is a regression added in the 1.3.44 release.

2024-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/Changes.rst: 1.3.44 is released in 2024.

	* version.sh: Updates in preparation for the 1.3.44 release.

	* magick/symbols.h: Update 'Gm' prefixed symbols.

2024-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news.

2024-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (GetImageInfo): Change the default for ImageInfo
	'progress' to False.  This parameter is used by 'animate' and
	'display'.  It was discovered that under Ubuntu 22.04 LTS, the
	progress indication in 'animate' and 'display' has changed from
	almost no cost, to taking vastly more time than the work to be
	performed!  As a result, there will be no graphical progress
	indication in the X11 commands unless this resource is set to
	True.  ImageMagick had already removed this progress indication.
	The -monitor option will cause progress output to stderr.

2024-08-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/docutils-articles.css: reStructuredText style sheet
	adjustments to work with HTML 4 and 5 synax, by Mark Mitchell.

	* www/docutils-api.css: reStructuredText style sheet adjustments
	for HTML 5, by Mark Mitchell.

	* tests/rwfile.tap: Adjustments for FlashPIX tests.

	* coders/fpx.c: Add tracing and attempt to reduce the amount of
	memory which is leaked by the defective library.

	* coders/hrz.c: Tidy and clarify code.

2024-08-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
