@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020240826"
-#define public MagickPackageReleaseDate "snapshot-20240826"
+#define public MagickPackageVersionAddendum ".020240827"
+#define public MagickPackageReleaseDate "snapshot-20240827"
