@@ -1,3 +1,9 @@
+2024-08-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/index.rst, www/Changes.rst: 1.3.45 is released in 2024.
+
+	* version.sh: Updates in preparation for the 1.3.45 release.
+
 2024-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* NEWS.txt: Update the news.
